# op_importer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/op_importer/: __init__.py  data_model.py  get_data.py  validate.py
src/op_importer/app/: __init__.py  main.py
tests/: test_api.py  test_data_model.py  test_main.py  test_validate.py
tests/fixtures/: invalid_contents.csv  invalid_headers.csv  test.csv
